syntax = "proto3";
option go_package = "proto/digitalcurrency";

service DigitalCurrency {
  rpc ConvertToSpecificCurrency(ConvertCurrencyRequest) returns (ConvertCurrencyResponse) {}
}

message ConvertCurrencyRequest {
  double amount = 1;
  string baseCurrency = 2;
  string quoteCurrency = 3;
}

message ConvertCurrencyResponse {
  double amount = 1;
}
